# assessed

./: .gitignore  B.txt  LICENSE  README.md  finddupl.c  mlist.c  mlist.h
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: Regex.launch
.metadata/.plugins/org.eclipse.jdt.core/: 662059197.index  externalLibsTimeStamps  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
AP3-2/: 1  DirectoryTree.java  Manager.java  Regex.java  Worker.java  fileCrawler.java
DB3/Assessed1/: Create Tables.sql  Query2.sql  Query3.sql  Query4.sql  Query6.sql
DB3/Assessed2/.metadata/: version.ini
DB3/Assessed2/LAB-6/: 1  DB3_Tom_Wallis.tar  Dogs.java  Report.odt  createtables.txt  setpath
DB3/Assessed2/LAB-6/.metadata/: version.ini
DB3/Assessed2/LAB-6/db3-javadoc-documents/: overview-tree.html
Labs/NS3/: lab1.c
Level3/AP3-1/: finddupl  makefile  mentry.c  mentry.h  test.c
Level3/AP3-2/: DirectoryTree.java  Manager.java
Level3/DB3/Assessed1/: Create Tables.sql  Query2.sql  Query6.sql
Level3/DB3/Assessed2/: createtables.sql
Level3/DB3/Assessed2/.metadata/: version.ini
Level3/DB3/Assessed2/LAB-6/: report.tex
Level3/Labs/NS3/: lab1.c
Level3/OS3/OS3_CW_checksum_3/: BoundedBuffer.c  Makefile.cygwin  fakeapplications.c  freepacketdescriptorstore_VAR1.c  freepacketdescriptorstore_VAR2.c  freepacketdescriptorstore_VAR3.c  freepacketdescriptorstore_blocking_get_VAR2.c  freepacketdescriptorstore_blocking_get_VAR4.c  freepacketdescriptorstore_nonblocking_get_VAR1.c  freepacketdescriptorstore_nonblocking_get_VAR2.c  freepacketdescriptorstore_nonblocking_get_VAR3.c  freepacketdescriptorstore_nonblocking_get_VAR4.c  generic_queue.c  networkdevice.h  networkdevice_await_incoming_VAR1.c  networkdevice_await_incoming_VAR4.c  networkdevice_ctor_VAR1.c  networkdevice_ctor_VAR2.c  networkdevice_ctor_VAR3.c  networkdevice_ctor_VAR4.c  networkdevice_reg_rx_pd_VAR1.c  networkdevice_reg_rx_pd_VAR2.c  networkdevice_reg_rx_pd_VAR4.c  networkdriver.h  networkdriver_VAR1.c  networkdriver_VAR2.c  networkdriver_VAR3.c  networkdriver_VAR4.c  networkdriver_rx_VAR4.c  networkdriver_tx_VAR1.c  networkdriver_tx_VAR2.c  networkdriver_tx_VAR3.c  networkdriver_tx_VAR4.c  packetdescriptor_VAR1.c  packetdescriptorcreator.c  testharness.c
Level3/OS3/solution/: Makefile.linux  freepacketdescriptorstore.h  freepacketdescriptorstore_blocking_get_VAR3.c  networkdevice.c  networkdevice_await_incoming_VAR4.c  networkdevice_reg_rx_pd_VAR1.c  networkdriver_rx_VAR1.c  networkdriver_tx_VAR1.c
Level3/PL3/: Fun.tokens  FunChecker.g  FunEncoder.g  for2.fun  makefile
Level3/PL3/tests/: do.fun  do2.fun  for.fun
Level3/PSD3/End Of Iteration Reports/: Iteration 4.tex
Level3/PSI3/: Essay-draft1.aux  Essay-draft1.tex  Essay-final.tex  essay_references.bib
Level3/TP3/Individual Reports/: Individual Report Final Version.tex
Level4/Alg4/: .classpath  .project
Level4/Alg4/Ass_Ex_Part_A/: FordFulk.java  Main.java
Level4/Alg4/Ass_Ex_Part_A/networkFlow/: DirectedGraph.java  Network.java  ResidualGraph.java
Level4/Alg4/Ass_Ex_Part_B/: FordFulk.java
Level4/Alg4/Ass_Ex_Part_B/networkFlow/: Edge.java  Network.java  ResidualGraph.java
Level4/Alg4/Ass_Ex_Part_C/: task_4_example.txt
Level4/CPM/exercise1/: .classpath  .project  12-4-04-03.txt  BanquetPlanner.java  Verify.java  hintsAndTips.txt  readme.txt  sol-12-4-04-03.txt
Level4/CPM/exercise1/data/: 100-20-00.txt  (+48 more)
Level4/CPM/exercise2/: .classpath  .project
Level5/PRR/Grant Proposal/: biblio.bib  gantt.tex  grant_proposal.tex  makefile  preamble.tex  report_template.tex
Level5/PRR/Literature Review/: bib_file.bib  makefile  review.tex
Level5/RMT/: Beecham_Motivation.tex  Benavides_Automated.tex  Chen_Variability.tex  Kampanes_EffectSize.tex  Kitchenham_Systematic.tex  Smite_GSE.tex  biblio.bib  makefile  preamble.tex  review.tex
Level5/haskell/: directory.aux  directory.tex  handsome.hs  hatest.hs  makefile  scraper.hs  submission_1.hs  submission_2.hs
OS3/: CMakeLists.txt
OS3/OS3_CW_checksum_3/: definitions.h  diagnostics.c  freepacketdescriptorstore_VAR2.c  freepacketdescriptorstore_VAR4.c  freepacketdescriptorstore_blocking_get_VAR1.c  freepacketdescriptorstore_put.c  networkdriver_tx_VAR1.c  packetdescriptor_VAR2.c  packetdescriptor_VAR4.c
OS3/solution/: Makefile.cygwin  Makefile.linux  freepacketdescriptorstore_VAR2.c  freepacketdescriptorstore_blocking_get_VAR3.c  freepacketdescriptorstore_nonblocking_get_VAR3.c  function_definitions.h  networkdevice_await_incoming_VAR2.c  networkdevice_await_incoming_VAR3.c  networkdevice_ctor_VAR1.c  networkdevice_reg_rx_pd_VAR3.c  networkdriver_VAR1.c  networkdriver_rx_VAR1.c  networkdriver_rx_VAR2.c  networkdriver_rx_VAR3.c  packetdescriptor_VAR1.c  packetdescriptor_VAR3.c
PL3/: Fun.g  FunChecker.g  FunChecker.java  FunEncoder.g  FunEncoder.java  FunLexer.java  FunParser.java  FunRun.java  FunSA.java
PL3/tests/: for.fun  repeat1.fun
PSI3/: Essay-draft1.tex  Essay-final.aux  Essay-final.blg
TP3/: report-draft1.aux  report-draft1.tex
TP3/Individual Reports/: Individual Report Draft 1.tex  Individual Report Final Version.tex
(+170 files in other folders)
