cmake_minimum_required(VERSION 2.8.4)
project(OS3)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    OS3_CW_checksum_3/BoundedBuffer.c
    OS3_CW_checksum_3/BoundedBuffer.h
    OS3_CW_checksum_3/definitions.h
    OS3_CW_checksum_3/destination.h
    OS3_CW_checksum_3/diagnostics.c
    OS3_CW_checksum_3/diagnostics.h
    OS3_CW_checksum_3/fakeapplications.c
    OS3_CW_checksum_3/fakeapplications.h
    OS3_CW_checksum_3/freepacketdescriptorstore.h
    OS3_CW_checksum_3/freepacketdescriptorstore__full.h
    OS3_CW_checksum_3/freepacketdescriptorstore_blocking_get_VAR1.c
    OS3_CW_checksum_3/freepacketdescriptorstore_blocking_get_VAR2.c
    OS3_CW_checksum_3/freepacketdescriptorstore_blocking_get_VAR3.c
    OS3_CW_checksum_3/freepacketdescriptorstore_blocking_get_VAR4.c
    OS3_CW_checksum_3/freepacketdescriptorstore_nonblocking_get_VAR1.c
    OS3_CW_checksum_3/freepacketdescriptorstore_nonblocking_get_VAR2.c
    OS3_CW_checksum_3/freepacketdescriptorstore_nonblocking_get_VAR3.c
    OS3_CW_checksum_3/freepacketdescriptorstore_nonblocking_get_VAR4.c
    OS3_CW_checksum_3/freepacketdescriptorstore_put.c
    OS3_CW_checksum_3/freepacketdescriptorstore_VAR1.c
    OS3_CW_checksum_3/freepacketdescriptorstore_VAR2.c
    OS3_CW_checksum_3/freepacketdescriptorstore_VAR3.c
    OS3_CW_checksum_3/freepacketdescriptorstore_VAR4.c
    OS3_CW_checksum_3/function_definitions.h
    OS3_CW_checksum_3/generic_queue.c
    OS3_CW_checksum_3/generic_queue.h
    OS3_CW_checksum_3/networkdevice.c
    OS3_CW_checksum_3/networkdevice.h
    OS3_CW_checksum_3/networkdevice__full.h
    OS3_CW_checksum_3/networkdevice_await_incoming_VAR1.c
    OS3_CW_checksum_3/networkdevice_await_incoming_VAR2.c
    OS3_CW_checksum_3/networkdevice_await_incoming_VAR3.c
    OS3_CW_checksum_3/networkdevice_await_incoming_VAR4.c
    OS3_CW_checksum_3/networkdevice_ctor_VAR1.c
    OS3_CW_checksum_3/networkdevice_ctor_VAR2.c
    OS3_CW_checksum_3/networkdevice_ctor_VAR3.c
    OS3_CW_checksum_3/networkdevice_ctor_VAR4.c
    OS3_CW_checksum_3/networkdevice_reg_rx_pd_VAR1.c
    OS3_CW_checksum_3/networkdevice_reg_rx_pd_VAR2.c
    OS3_CW_checksum_3/networkdevice_reg_rx_pd_VAR3.c
    OS3_CW_checksum_3/networkdevice_reg_rx_pd_VAR4.c
    OS3_CW_checksum_3/networkdriver.h
    OS3_CW_checksum_3/networkdriver_rx_VAR1.c
    OS3_CW_checksum_3/networkdriver_rx_VAR2.c
    OS3_CW_checksum_3/networkdriver_rx_VAR3.c
    OS3_CW_checksum_3/networkdriver_rx_VAR4.c
    OS3_CW_checksum_3/networkdriver_tx_VAR1.c
    OS3_CW_checksum_3/networkdriver_tx_VAR2.c
    OS3_CW_checksum_3/networkdriver_tx_VAR3.c
    OS3_CW_checksum_3/networkdriver_tx_VAR4.c
    OS3_CW_checksum_3/networkdriver_VAR1.c
    OS3_CW_checksum_3/networkdriver_VAR2.c
    OS3_CW_checksum_3/networkdriver_VAR3.c
    OS3_CW_checksum_3/networkdriver_VAR4.c
    OS3_CW_checksum_3/packetdescriptor.h
    OS3_CW_checksum_3/packetdescriptor_VAR1.c
    OS3_CW_checksum_3/packetdescriptor_VAR2.c
    OS3_CW_checksum_3/packetdescriptor_VAR3.c
    OS3_CW_checksum_3/packetdescriptor_VAR4.c
    OS3_CW_checksum_3/packetdescriptorcreator.c
    OS3_CW_checksum_3/packetdescriptorcreator.h
    OS3_CW_checksum_3/pid.h
    OS3_CW_checksum_3/testharness.c
    solution/BoundedBuffer.c
    solution/BoundedBuffer.h
    solution/definitions.h
    solution/destination.h
    solution/diagnostics.c
    solution/diagnostics.h
    solution/fakeapplications.c
    solution/fakeapplications.h
    solution/freepacketdescriptorstore.h
    solution/freepacketdescriptorstore__full.h
    solution/freepacketdescriptorstore_blocking_get_VAR2.c
    solution/freepacketdescriptorstore_nonblocking_get_VAR3.c
    solution/freepacketdescriptorstore_put.c
    solution/freepacketdescriptorstore_VAR2.c
    solution/function_definitions.h
    solution/generic_queue.c
    solution/generic_queue.h
    solution/networkdevice.c
    solution/networkdevice.h
    solution/networkdevice__full.h
    solution/networkdevice_await_incoming_VAR1.c
    solution/networkdevice_await_incoming_VAR2.c
    solution/networkdevice_await_incoming_VAR3.c
    solution/networkdevice_await_incoming_VAR4.c
    solution/networkdevice_ctor_VAR1.c
    solution/networkdevice_ctor_VAR2.c
    solution/networkdevice_ctor_VAR3.c
    solution/networkdevice_ctor_VAR4.c
    solution/networkdevice_reg_rx_pd_VAR1.c
    solution/networkdevice_reg_rx_pd_VAR2.c
    solution/networkdevice_reg_rx_pd_VAR3.c
    solution/networkdevice_reg_rx_pd_VAR4.c
    solution/networkdriver.h
    solution/networkdriver_rx_VAR1.c
    solution/networkdriver_rx_VAR2.c
    solution/networkdriver_rx_VAR3.c
    solution/networkdriver_rx_VAR4.c
    solution/networkdriver_tx_VAR1.c
    solution/networkdriver_tx_VAR2.c
    solution/networkdriver_tx_VAR3.c
    solution/networkdriver_tx_VAR4.c
    solution/networkdriver_VAR1.c
    solution/networkdriver_VAR2.c
    solution/networkdriver_VAR3.c
    solution/networkdriver_VAR4.c
    solution/packetdescriptor.h
    solution/packetdescriptor_VAR1.c
    solution/packetdescriptor_VAR2.c
    solution/packetdescriptor_VAR3.c
    solution/packetdescriptor_VAR4.c
    solution/packetdescriptorcreator.c
    solution/packetdescriptorcreator.h
    solution/pid.h
    solution/testharness.c)

add_executable(OS3 ${SOURCE_FILES})